[tool.poetry]
name = "medeasy-py"
version = "0.1.0"
description = "python version of medeasy api"
authors = ["Ad450 <adjeimanue@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
sqlalchemy = "^2.0.31"
bcrypt = "^4.1.3"
argon2-cffi = "^23.1.0"
pyjwt = "^2.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
